Adds Paketo support to generate x86 Docker-Image